# rm_abstract_layer

./: .gitignore  API.md  ARCHITECTURE.md  CONTRIBUTING.md  DEVELOPMENT_PLAN.md  ENVIRONMENT_SETUP.md  INSTALL.md  INSTALLATION_SUMMARY.md  PLUGIN_ARCHITECTURE.md  QUICKSTART.md  README.md  README_OLD.md  VISION_IMPLEMENTATION_SUMMARY.md  key_file.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-gpu.txt  requirements.txt  setup.py
.claude/: settings.local.json
.github/workflows/: ci.yml  hardware-test.yml
docker/: Dockerfile.triton  docker-compose.yml
examples/: basic_usage.py  device_switching.py  gpu_to_npu_migration.py  gpu_vllm_usage.py  plugin_system_demo.py  serving_engines_demo.py  simple_plugin_test.py  test_gpu_vllm.py  unified_serving_demo.py
requirements/: all.txt  base.txt  gpu.txt  npu-rbln.txt  torchserve.txt  triton.txt
scripts/: install_deps.sh  setup-uv.ps1  setup-uv.sh  setup-venv.ps1  setup-venv.sh
src/rm_abstract/: ARCHITECTURE.md  __init__.py  cli.py  exceptions.py  installer.py  system_info.py  system_validator.py  verify.py
src/rm_abstract/api/: __init__.py  __main__.py  models.py  server.py
src/rm_abstract/backends/: __init__.py  auto_register.py  plugin_adapter.py  registry.py
src/rm_abstract/backends/cpu/: __init__.py  cpu_backend.py
src/rm_abstract/backends/gpu/: __init__.py  vllm_backend.py
src/rm_abstract/backends/npu/: __init__.py  base.py
src/rm_abstract/backends/npu/plugins/: __init__.py  furiosa.py  rebellions.py
src/rm_abstract/conversion/: __init__.py  onnx_utils.py
src/rm_abstract/core/: __init__.py  backend.py  binary_adapter.py  config.py  controller.py  model_proxy.py  plugin.py  resource.py  resource_manager.py
src/rm_abstract/hooks/: __init__.py  pytorch_hook.py  transformers_hook.py
src/rm_abstract/serving/: __init__.py  base.py  engine_factory.py  torchserve_engine.py  triton_engine.py  utils.py  vllm_engine.py
src/rm_abstract/utils/: __init__.py  logger.py
src/rm_abstract/validators/: __init__.py  base.py
tests/: __init__.py  conftest.py  test_api.py  test_core.py  test_inference.py  test_serving.py
tests/integration/: test_mock_backends.py
tests/unit/: test_backend.py  test_config.py  test_controller.py  test_exceptions.py  test_model_proxy.py
